fixed final spacing issue for tablet screens (I hope!)

--- a/web/php_project/css/styles.css
+++ b/web/php_project/css/styles.css
@@ -359,7 +359,7 @@ a:active {
 
     h3 {
         font-size: 14pt;
-        margin: -90px 0 30px 0;
+        margin: auto;
     }
 
     h4 {
